# pm-data-infra

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  startlog_capture.txt
docs/: MASTER.md  UNIVERSE_REFRESH_PLAN.md
pm_arb/: __init__.py  book.py  capture_inspect.py  capture_online.py  cli.py  clob_rest.py  clob_ws.py  config.py  engine.py  fixed.py  gamma.py  reconcile.py  report.py  sweep.py  ws_decode.py
pm_arb_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pm_data/: __init__.py  capture.py  capture_format.py  capture_inspect.py  capture_offline.py  capture_online.py  capture_slice.py  capture_state.py  cli.py  clob_ws.py  config.py  fatal_policy.py  fees.py  gamma.py  metrics_heartbeat.py  parse_pipeline.py  policy.py  segments.py  windows_timer.py  writers_frames.py  writers_ndjson.py  ws_decode.py  ws_primitives.py  ws_runner.py
tests/: test_allocator_determinism.py  test_capture_audit_quality.py  test_capture_bench_regression.py  test_capture_format.py  test_capture_inspect.py  test_capture_offline.py  test_capture_online_confirm.py  test_capture_online_integration.py  test_capture_online_refresh.py  test_capture_online_utils.py  test_capture_slice.py  test_cli.py  test_config.py  test_discover.py  test_engine_offline.py  test_expected_churn.py  test_fee_model.py  test_fee_rate_client.py  test_fee_regime.py  test_fixed.py  test_gamma.py  test_lockfile_policy.py  test_market_select.py  test_monotonic_precision.py  test_orchestrator_determinism.py  test_phase1_allowlist.py  test_reconcile.py  test_replay_crc_verification.py  test_replay_determinism_hash.py  test_replay_pnl_determinism.py  test_replay_reads_events.py  (+15 more)
(+29 files in other folders)
