[project]
name = "pm-arb-py"
version = "0.1.0"
description = "Phase 1 capture/ingest plant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "orjson>=3.9.15",
  "requests>=2.31.0",
  "uvloop>=0.19.0; platform_system != \"Windows\"",
  "websockets>=12.0",
]

[project.scripts]
pm_arb = "pm_arb.cli:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pm_arb", "pm_arb.runtime", "pm_arb.strategies"]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.6",
]
